Temporary fix for counter jumping

--- a/src/styles/quiz.css
+++ b/src/styles/quiz.css
@@ -68,6 +68,7 @@
   width: 100%;
   min-width: 6rem;
   max-width: 19rem;
+  min-height: 27rem;
   border-radius: var(--primary-border-radius);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(4px 4px 40px rgba(255, 0, 0, 0.9));
 }
@@ -91,6 +92,9 @@
   .quiz-answer {
     font-size: 1.4rem;
     padding: 1.5rem;
+  }
+  .quiz-photo {
+    min-height: 27rem;
   }
 }
 
@@ -127,5 +131,6 @@
   }
   .quiz-photo {
     margin-left: 5rem;
+    min-height: 40rem;
   }
 }
